--- a/public/index.html
+++ b/public/index.html
@@ -4,16 +4,30 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap 101 Template</title>
+    <title>Tasks!</title>
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+		<link rel="stylesheet" href="css/style.css">
   </head>
   <body>
 		<div class="container">
 			<div id="main">
-				<h1>Hello, world!</h1>
 			</div>
 		</div>
+
+		<script type="text/template" id="tasksViewTemplate">
+			<h1>Task List</h1>
+			<div class="input-group">
+				<span class="input-group-addon">Task</span>
+				<input id="task-input" type="text" class="form-control" placeholder="Buy milk">
+				<span class="input-group-btn"><button class="btn btn-success">Create!</button></span>
+			</div>
+			<hr>
+		</script>
+
+		<script type="text/template" id="taskViewTemplate">
+			<input type="checkbox" <% if (complete) { %> checked <% } %>><label><%- description %></label>
+		</script>
 
 		<script src="js/jquery.js"></script>
 		<script src="js/underscore.js"></script>
